[gd_scene load_steps=2 format=2]

[ext_resource path="res://semana5.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button2" type="Button" parent="."]
margin_left = 550.0
margin_top = 54.0
margin_right = 677.0
margin_bottom = 107.0
text = "2"

[node name="Button" type="Button" parent="."]
margin_left = 341.0
margin_top = 57.0
margin_right = 464.0
margin_bottom = 109.0
text = "1"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 420.0
margin_top = 260.0
margin_right = 514.0
margin_bottom = 302.0

[node name="nome" type="Label" parent="."]
margin_left = 837.0
margin_top = 276.0
margin_right = 1088.0
margin_bottom = 315.0
text = "nome"

[node name="Button3" type="Button" parent="."]
margin_left = 745.0
margin_top = 61.0
margin_right = 867.0
margin_bottom = 113.0
text = "3"

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 721.0
margin_top = 266.0
margin_right = 813.0
margin_bottom = 310.0

[node name="Label" type="Label" parent="."]
margin_left = 411.0
margin_top = 339.0
margin_right = 488.0
margin_bottom = 401.0

[node name="Label2" type="Label" parent="."]
margin_left = 494.0
margin_top = 331.0
margin_right = 763.0
margin_bottom = 459.0

[node name="numero" type="Label" parent="."]
margin_left = 280.0
margin_top = 247.0
margin_right = 413.0
margin_bottom = 306.0
text = "numero
"

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
